# TECHX_Robocon_GMK_Rx

./: .gitattributes  .gitignore  README.md  test_sender.py  test_sender_local.py
docs/: FIELD_OPERATIONS.md  udp_v2_bridge.md
install/: local_setup.sh  setup.sh
install/techx_vision_bridge/lib/techx_vision_bridge/: vision_bridge_node
install/techx_vision_bridge/share/techx_vision_bridge/: local_setup.sh  package.sh
log/: latest_build
scripts/: field_start_gmk.sh  setup_field_network.sh
src/techx_vision_bridge/: CMakeLists.txt  package.xml
src/techx_vision_bridge/config/: vision_bridge.yaml
src/techx_vision_bridge/docs/: vision_request_flow.md
src/techx_vision_bridge/launch/: vision_bridge.launch.py
src/techx_vision_bridge/msg/: VisionFrame.msg  VisionObject.msg  VisionRequest.msg  VisionSelection.msg  VisionTarget.msg
src/techx_vision_bridge/src/: vision_bridge_node.cpp  vision_frame_bridge_node.cpp  vision_selector_node.cpp
src/techx_vision_bridge/tools/: apply_calibration_yaml.py  calibration_guard_node.py  check_vision_bridge_config.py  estimate_extrinsic_from_points.py  mock_jetson_sender.py  selection_debug_node.py  vision_request_demo.py
